[gd_scene load_steps=2 format=3 uid="uid://buildinghud"]

[ext_resource type="Script" path="res://scripts/hud/BuildingHUD.gd" id="1_building_hud"]

[node name="BuildingHUD" type="PanelContainer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -450.0
offset_top = -150.0
offset_right = 450.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_building_hud")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 10

[node name="BuildCategories" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="CategoryLabels" type="HBoxContainer" parent="MarginContainer/BuildCategories"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="ResourceBuildingsLabel" type="Label" parent="MarginContainer/BuildCategories/CategoryLabels"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
text = "Ressourcengeb√§ude"
horizontal_alignment = 1

[node name="InfrastructureLabel" type="Label" parent="MarginContainer/BuildCategories/CategoryLabels"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
text = "Infrastruktur"
horizontal_alignment = 1

[node name="SpecialLabel" type="Label" parent="MarginContainer/BuildCategories/CategoryLabels"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
text = "Spezial"
horizontal_alignment = 1

[node name="BuildButtons" type="HBoxContainer" parent="MarginContainer/BuildCategories"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="ResourceBuildings" type="VBoxContainer" parent="MarginContainer/BuildCategories/BuildButtons"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="Infrastructure" type="VBoxContainer" parent="MarginContainer/BuildCategories/BuildButtons"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="Special" type="VBoxContainer" parent="MarginContainer/BuildCategories/BuildButtons"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="DemolishButton" type="Button" parent="."]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
focus_mode = 0
toggle_mode = true
text = "X"
